Update go-api configuration in ArgoCD and refine values for deployment

--- a/environments/dev/values-dev.yaml
+++ b/environments/dev/values-dev.yaml
@@ -1,1 +1,10 @@
-replicaCount:2
+replicaCount: 2
+
+image:
+  repository: iamdanielemmanuel22643/kustomize-backend
+  tag: "latest"
+  pullPolicy: IfNotPresent
+
+service:
+  type: ClusterIP
+  port: 8080
