feat: Add PostgreSQL and Redis Helm charts with ArgoCD integration
- Created PostgreSQL Helm chart with necessary templates, values, and configurations.
- Added Redis Helm chart with similar structure and configurations.
- Implemented ArgoCD application manifests for both PostgreSQL and Redis.
- Included service accounts, ingress, and horizontal pod autoscaler configurations.
- Added notes and helper templates for better usability.
- Established default values for both charts to streamline deployments.

--- a/Simple Helm + ArgoCD/apps/go-api-chart/argocd/go-api-dev.yaml
+++ b/Simple Helm + ArgoCD/apps/go-api-chart/argocd/go-api-dev.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: go-api
+  name: go-api-dev
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/Daniel-Makhoba-Emmanuel/GitOps-Repo.git
-    targetRevision: main
-    path: apps/go-api-chart       # 👈 where your chart lives
+    targetRevision: HEAD
+    path: apps/go-api-chart
     helm:
       valueFiles:
-        - ../../environments/dev/values-dev.yaml   # 👈 dev overrides
+        - ../../values-dev.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: dev
@@ -19,3 +19,5 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
