--- a/Simple Helm + ArgoCD/argocd/argocd-root.yaml
+++ b/Simple Helm + ArgoCD/argocd/argocd-root.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/Daniel-Makhoba-Emmanuel/GitOps-Repo.git
     targetRevision: HEAD
-    path: apps/
+    path: apps
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
