--- a/Simple Helm + ArgoCD/apps/go-api.yaml
+++ b/Simple Helm + ArgoCD/apps/go-api.yaml
@@ -1,18 +1,21 @@
-# argocd/argocd-root.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argocd-root
+  name: go-api
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/Daniel-Makhoba-Emmanuel/GitOps-Repo.git
     targetRevision: HEAD
-    path: apps
+    path: apps/go-api-chart
+    helm:
+      valueFiles:
+        - values.yaml
+        - ../values-dev.yaml   # overlay for dev
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: go-api
   syncPolicy:
     automated:
       prune: true
