--- a/argo/app-nginx.yaml
+++ b/argo/app-nginx.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/Daniel-Makhoba-Emmanuel/GitOps-Repo.git
     path: charts/nginx
-    targetRevision: HEAD
+    targetRevision: 'main'
     helm: {}
   destination:
     server: https://kubernetes.default.svc
