--- a/argo/argo-nginx-prod.yaml
+++ b/argo/argo-nginx-prod.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx-dev
+  name: nginx-prod
   namespace: argocd
 spec:
   project: default
@@ -9,10 +9,12 @@ spec:
     repoURL: https://github.com/Daniel-Makhoba-Emmanuel/GitOps-Repo.git
     path: charts/nginx
     targetRevision: 'main'
-    helm: {}
+    helm:
+      valueFiles:
+        - envs/prod/values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: dev
+    namespace: prod
   syncPolicy:
     automated:
       prune: true
