--- a/argo/argo-nginx-stage.yaml
+++ b/argo/argo-nginx-stage.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: 'main'
     helm:
       valueFiles:
-        - envs/stage/values.yaml
+        - ../../envs/stage/values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: stage
