Add Helm charts for echo and whoami applications, including deployment configurations
- Created Helm chart for echo application with deployment, service, ingress, and HPA configurations.
- Added values files for different environments (dev, prod, stage) for echo application.
- Created Helm chart for whoami application with similar configurations as echo.
- Added ArgoCD application manifests for managing deployments of nginx and echo applications in dev environment.
- Included .helmignore files to exclude unnecessary files from Helm packages.
- Established default values for both applications to streamline deployments.

--- a/platform-gitops/argo/apps/nginx-dev.yaml
+++ b/platform-gitops/argo/apps/nginx-dev.yaml
@@ -7,11 +7,11 @@ spec:
   project: default
   source:
     repoURL: https://github.com/Daniel-Makhoba-Emmanuel/GitOps-Repo.git
-    path: charts/nginx
+    path: platform-gitops/apps/nginx/chart
     targetRevision: 'main'
     helm:
       valueFiles:
-        - ../../envs/dev/values.yaml
+        - ../../apps/nginx/values/dev.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: dev
