--- a/platform-gitops/argo/apps/nginx-dev.yaml
+++ b/platform-gitops/argo/apps/nginx-dev.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: 'main'
     helm:
       valueFiles:
-        - ../../apps/nginx/values/dev.yaml
+        - ../../values/dev.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: dev
