--- a/platform-gitops/argo/apps/whoami-prod.yaml
+++ b/platform-gitops/argo/apps/whoami-prod.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: whoami-prod
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
