feat: Add Helm charts for Nginx and Whoami applications with autoscaling and ingress support
- Created Nginx and Whoami Helm charts with templates for deployment, service, ingress, HPA, and service account.
- Added values files for different environments (dev, stage, prod) to configure replica counts and other settings.
- Implemented test connection pod for both applications.
- Established ArgoCD application manifests for managing deployments across environments.
- Included annotations and labels for better resource management and identification.

--- a/multiple-apps-multiple-environments/argo/apps/echo-prod.yaml
+++ b/multiple-apps-multiple-environments/argo/apps/echo-prod.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx-stage
+  name: echo-prod
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -9,14 +9,14 @@ spec:
   project: default
   source:
     repoURL: https://github.com/Daniel-Makhoba-Emmanuel/GitOps-Repo.git
-    path: platform-gitops/apps/nginx/chart
+    path: multiple-apps-mulitple-environments/apps/echo/chart
     targetRevision: 'main'
     helm:
       valueFiles:
-        - ../values/stage.yaml
+        - ../values/prod.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: stage
+    namespace: prod
   syncPolicy:
     automated:
       prune: true
