--- a/multiple-apps-multiple-environments/argo/apps/whoami-dev.yaml
+++ b/multiple-apps-multiple-environments/argo/apps/whoami-dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: echo-prod
+  name: whoami-dev
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -9,14 +9,14 @@ spec:
   project: default
   source:
     repoURL: https://github.com/Daniel-Makhoba-Emmanuel/GitOps-Repo.git
-    path: platform-gitops/apps/echo/chart
+    path: multiple-apps-mulitple-environments/apps/whoami/chart
     targetRevision: 'main'
     helm:
       valueFiles:
-        - ../values/prod.yaml
+        - ../values/dev.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: prod
+    namespace: dev
   syncPolicy:
     automated:
       prune: true
